# polyopt

./: Cargo.toml  README.md  benchmark.sh  run_all_examples.sh  validate_examples.sh
benches/: optimization_benchmarks.rs
examples/: conv2d.poly  convolution.poly  gemm.poly  jacobi.poly  lu.poly  matmul.poly  stencil2d.poly
examples/basic/: array_copy.poly  array_init.poly  vector_add.poly  vector_scale.poly
examples/linalg/: atax.poly  bicg.poly  matmul.poly  matvec.poly  symm.poly  transpose.poly  trisolve.poly
examples/parallel/: embarrassingly_parallel.poly  rowsum.poly
examples/reductions/: dot_product.poly  frobenius_norm.poly  prefix_sum.poly  vector_sum.poly
examples/stencils/: conv2d.poly  gauss_seidel_2d.poly  jacobi_2d.poly  stencil_1d.poly  stencil_2d_5pt.poly  stencil_2d_9pt.poly
examples/transformations/: distribution_example.poly  fusion_example.poly  interchange_example.poly  tiling_example.poly
src/: autotune.rs  lib.rs  main.rs
src/analysis/: README.md  dependence.rs  mod.rs  scop.rs
src/autotuning/: README.md  config.rs  mod.rs  results.rs  runner.rs  search.rs
src/codegen/: README.md  ast_builder.rs  c.rs  mod.rs
src/frontend/: README.md  ast.rs  lexer.rs  mod.rs  parser.rs  semantic.rs  token.rs
src/ir/: README.md  ast.rs  hir.rs  lower_ast.rs  lower_hir.rs  mod.rs  pir.rs
src/isl/: README.md  codegen.rs  context.rs  map.rs  mod.rs  schedule.rs  set.rs  simulation.rs
src/polyhedral/: README.md  constraint.rs  expr.rs  map.rs  mod.rs  operations.rs  set.rs  space.rs
src/transform/: README.md  fusion.rs  interchange.rs  mod.rs  pipeline.rs  scheduler.rs  skewing.rs  tiling.rs  unrolling.rs
src/utils/: errors.rs  intern.rs  location.rs  matrix.rs  mod.rs  poly_print.rs  pretty.rs  visualizer.rs
tests/: integration_tests.rs
