[package]
name = "polyopt"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A polyhedral compiler optimization framework"
license = "MIT"
repository = "https://github.com/yourusername/polyopt"
keywords = ["compiler", "optimization", "polyhedral", "parallelization"]
categories = ["compilers", "development-tools"]

[features]
default = []  # parallel and visualization disabled by default due to rustc version requirements
# Core features
visualization = ["dep:plotters", "dep:svg"]
parallel = ["dep:rayon"]
# Advanced features (stretch goals)
gpu = []                # For CUDA code generation
ml = ["dep:smartcore"]  # For ML-based scheduling
distributed = []        # MPI support (external linking)
sparse = []             # Sparse iteration space support
autotuning = ["dep:rand", "dep:statrs"]

[dependencies]
# Core utilities
thiserror = "1.0"       # Error handling
anyhow = "1.0"          # Error propagation
log = "0.4"             # Logging facade
env_logger = "0.11"     # Logger implementation
clap = { version = "4.4", features = ["derive"] }  # CLI parsing

# Data structures & algorithms
indexmap = "2.0"        # Ordered hash maps
petgraph = "0.6"        # Graph data structures (for CFG, dependence graphs)
smallvec = "1.11"       # Small vector optimization
bitvec = "1.0"          # Bit vectors for analysis
num-rational = "0.4"    # Rational arithmetic for affine expressions
num-traits = "0.2"      # Numeric traits
num-integer = "0.1"     # Integer operations (gcd, lcm)
num-bigint = "0.4"      # Big integers for parametric bounds

# Linear algebra & math
nalgebra = "0.32"       # Matrix operations
ndarray = "0.15"        # N-dimensional arrays

# ILP Solver (for scheduling)
good_lp = "1.8"         # Linear programming
minilp = "0.2"          # Lightweight LP solver

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"

# Visualization (optional)
plotters = { version = "0.3", optional = true }
svg = { version = "0.17", optional = true }

# Parallelism (optional)
rayon = { version = "1.5", optional = true }  # pinned to older version

# Auto-tuning (optional)
rand = { version = "0.8", optional = true }
statrs = { version = "0.16", optional = true }

# ML-based scheduling (optional)
smartcore = { version = "0.3", optional = true }

# String interning for identifiers
string-interner = "0.17"

# Lazy initialization
once_cell = "1.19"

# Pretty printing
pretty = "0.12"

# Itertools for iterator utilities
itertools = "0.12"

# Unicode support for lexer
unicode-xid = "0.2"

[dev-dependencies]
criterion = "0.5"       # Benchmarking
proptest = "1.4"        # Property-based testing
insta = "1.34"          # Snapshot testing
tempfile = "3.9"        # Temporary files for tests
pretty_assertions = "1.4"  # Better assertion diffs

[[bench]]
name = "optimization_benchmarks"
harness = false

[[bin]]
name = "polyopt"
path = "src/main.rs"

[[bin]]
name = "polyvis"
path = "src/bin/visualizer.rs"
required-features = ["visualization"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
